--- a/style.css
+++ b/style.css
@@ -1,54 +1,147 @@
-* {
-    border: 1px solid limegreen;
-}
-
 body {
-    background-color: #BC8F8F;
+    font-family: 'Macondo Swash Caps', cursive;
+    background-color: #FFF8DC;
     min-height: 100vh;
     margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-image:
+        url(/images/avatarBattle.png);
+    background-size: cover;
+
 }
 
-.choiceContainer {
-    display: flex;
-    width: 50%;
-    justify-content: space-around;
+img {
+    height: 70px;
 }
 
-.scoreContainer {
+.header {
+    background-image: linear-gradient(45deg, #d23303, #0a5cd8, #11ab1b);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
+}
+
+.grayScale {
+    filter: grayscale(100%)
+}
+
+.imageBox .compFire {
+    height: 50px;
+}
+
+.imageBox .compWater {
+    height: 50px;
+}
+
+.imageBox .compEarth {
+    height: 50px;
+}
+
+.playAgain {
+    background-color: rgba(255, 255, 255, 0.5);
+    padding: 10px;
+    border: 1px solid #FAF0E6;
+    border-radius: 3px;
+}
+
+.displayNone {
+    display: none;
+}
+
+.headerContainer {
     display: flex;
     width: 60%;
     justify-content: space-around;
-}
-
-.playerScoreBox, .computerScoreBox {
-    display: flex;
-    width: 100%;
 }
 
 .statusContainer {
     display: flex;
-    width: 60%;
-    height: 100px;
+    justify-content: flex-start;
+    align-items: center;
+    width: 80%;
+    height: 80px;
 }
 
+.compBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    font-size: 16px;
+    flex: 1;
+    font-weight: 600;
 
+}
 
+.statusBox {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    font-size: 20px;
+    font-weight: 800;
+    justify-content: space-around;
+    flex: 1;
+}
 
+.imageBox {
+    display: flex;
 
+}
 
+.choiceContainer {
+    display: flex;
+    width: 60%;
+    justify-content: space-between;
+    /*border: solid 2px dimgray;*/
+    border-radius: 3px;
+    margin: 25px;
+    padding: 10px;
+}
 
+.winnerLoser {
+    margin-bottom: 25px;
+    font-size: xx-large;
+}
 
+.rulesContainer {
+    display: flex;
+    width: 80%;
+    justify-content: space-around;
+    border: 1px solid #FAF0E6;
+    border-radius: 3px;
+    padding: 25px;
+    font-weight: 1000;
+    margin: 0px 10px 20px 10px;
+    background-color: rgba(255, 255, 255, 0.3)
+}
 
+.fireRule {
+    color: red;
+}
 
+.waterRule {
+    color: blue;
+}
 
+.earthRule {
+    color: #006400;
+}
 
+.scorches {
+    color: #FF8C00;
+    font-size: 25px;
+}
 
+.quenches {
+    color: #87CEFA;
+    font-size: 25px;
+}
 
-
-
-button {
-    border-radius: 10px;
+.absorbs {
+    color: #808000;
+    font-size: 25px;
 }
