--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     flex-direction: column;
     align-items: center;
     background-image:
-        url(/images/avatarbattle.png);
+        url(images/avatarbattle.png);
     background-size: cover;
 
 }
